src/pages/HomePageWarehouse/HomePageWarehouse.scss
@use "../../styles/global" as *;
@use "../../styles/mixins" as *;
@use "../../styles/variables" as *;

// header section for warehouses with title, searchbar & button
.main {
  width: 100vw;
  background-color: $color-background-light-grey;

  &__content {
    width: 90vw;
    margin: 0 $spacing-small;
    background-color: $color-primary-white;
    // border: $divider-width solid $divider-color; // remove later
    border-radius: 5px;
    position: relative;
    top: -4rem;
  }
}

.warehouse-header {
  width: 90vw;
  padding: 0 $spacing-small;

  // background-color: $colo;

  @include flexbox(column, center, flex-start);

  &__title {
    font-size: $mob-page-header;
    margin-top: $spacing-big;
    margin-bottom: $spacing-small;
    flex-grow: 1;
  }

  &__button {
    width: 80vw;
    background-color: $color-primary-indigo;
    color: $color-primary-white;
    font-size: $mob-label-link-button-body-medium;
    border: 0;
    border-radius: $button-form-tag-radius;
    margin-bottom: $spacing-small;
    padding: 0.5rem;
  }
}

// hide static header section for tablet mode in mobile view
.warehouse-card-header--tablet {
  text-align: center;
  display: none;
}

// tablet view

@include tablet {
  .main {
    &__content {
      margin-inline: auto;
    }
  }

  .warehouse-header {
    padding: 0 $spacing-big;
    @include flexbox(row, flex-start, center);

    &__title {
      font-size: $desk-page-header;
      margin-top: 2rem;
      // cn remove margins & give height to W.H header here
    }

    &__button {
      width: 20vw;
      font-size: $desk-label-link-button-body-medium;
      margin-bottom: 0;
    }
  }

  .warehouse-card-header--tablet {
    width: 90vw;
    background-color: $color-background-light-grey;
    padding: 0 $spacing-big;
    @include flexbox(row, flex-start, center);
  }

  .warehouse__title--tablet {
    width: 13vw;
  }
}

// desktop mode

@include desktop {
  .main {
    &__content {
      width: 83vw;
    }
  }

  .warehouse-card-header--tablet {
    width: 83vw;
    padding: 0.8rem $spacing-big;

    @include flexbox(row, flex-start, center);
    // @include flexbox(row, space-between, center);
  }

  .warehouse-header {
    width: 83vw;
    // padding: 0 $spacing-big;

    &__button {
      width: 12vw;
    }
  }

  .address-container {
    @include flexbox(row, flex-start, center);
  }
}

